Fix link-url overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,9 @@ body {
 .link-url {
     margin-top: .25rem;
     font-size: .6em;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: var(--primary-color);
 }
 
